fix desktop alignment

--- a/app/components/card/card.css
+++ b/app/components/card/card.css
@@ -5,20 +5,17 @@
     transform-style: preserve-3d;
     position: relative;
     cursor: pointer;
-
   }
   
   .card img {
     width: 100%;
-    height: 100%;
-    padding: 10;
+    height: 80%;
   }
   
   .card .card-face {
     backface-visibility: hidden;
     position: absolute;
     width: 100%;
-    height: 100%;
   }
   
   .card .card-back-face {
@@ -29,14 +26,15 @@
     transform: rotateY(180deg);
   }
   
-  .card.is-inactive {
-    opacity: 0.4;
-  }
   
-  @media (max-width: 768px) {
+  @media (max-width: 640px) {
+    .card {
+      padding-bottom: 18%;
+
+    }
     .card img {
-      width: 100%;
-      height: 100%;
+      width: 95%;
+      height: 70%;
     }
   }
   
